--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pri",
-  "version": "4.2.0",
+  "version": "4.2.0-beta.10",
   "types": "src/node/index.ts",
   "main": "built/node/index.js",
   "scripts": {
@@ -21,6 +21,9 @@
   },
   "bin": {
     "pri": "built/bin.js"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
@@ -107,7 +110,7 @@
     "gulp-watch": "^5.0.1",
     "highlight.js": "9.16.2",
     "html-webpack-plugin": "3.2.0",
-    "husky": "4.2.1",
+    "husky": "^4.3.0",
     "inquirer": "7.0.0",
     "isomorphic-fetch": "2.2.1",
     "jest": "25.1.0",
